# AshEdit

./: CHANGELOG.txt  CMakeLists.txt  README.txt
docs/: CONFIGURING.txt  FORMAT.txt  Licenses.txt  Map Format.txt
include/: general.h  widgets.h
include/images/: clear.png.h  clone.png.h  fill.png.h  icon.h  macro.png.h  magic_wand.png.h  marquee.png.h  mouse_cursor.h  moved_tile.h  mover.png.h  pencil.png.h  record.png.h  screenshot.png.h  solid.h  solids.png.h  toggle_layer.png.h  toggle_solids.png.h
mac/: Info.plist  NON_MAS_Info.plist
mac/AshEdit.xcodeproj/: project.pbxproj
misc/: AshEdit.desktop  osx_allegro.diff  versioninfo.rc
misc/icons/: icon.icns
misc/steam/linux/: run_build_ashedit.sh
misc/steam/linux/scripts/: build_ashedit_linux.vdf  depot_ashedit_linux.vdf
misc/steam/mac/: run_build-ashedit-mac.sh
misc/steam/mac/scripts/: build-ashedit-mac.vdf  depot-ashedit-mac.vdf
misc/steam/windows/: run_build_ashedit.bat
misc/steam/windows/scripts/: build_ashedit.vdf  depot_ashedit.vdf
misc/trailer_assets/: 1.tga  2.tga  3.tga  4.tga  ashedit.flp  ashedit.mid  ashedit.mml
src/: general.cpp  main.cpp
